other-mpol/replace-image-registry/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: replace-registry-ns
