other-mpol/replace-image-registry/.chainsaw-test/partial-exception-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: partial-exception
  namespace: replace-registry-ns
spec:
  containers:
  - name: first
    image: approved.example/keep:1
  - name: middle
    image: example/mutate:1
  - name: last
    image: example/mutate-last:1
