other-mpol/replace-image-registry/.chainsaw-test/pod-patched03.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod03
  namespace: replace-registry-ns
spec:
  initContainers:
  - name: kyverno
    image: myregistry.corp.com/kyverno:1.10.1
  - name: busybox-init
    image: myregistry.corp.com/foo/bar/baz/busybox:1.35
  containers:
  - name: busybox
    image: myregistry.corp.com/kyverno:1.10.1
  - name: busybox02
    image: myregistry.corp.com/foo/bar/baz/busybox:1.35
